--- a/MySpecialWeb/composer.json
+++ b/MySpecialWeb/composer.json
@@ -20,7 +20,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+        "app/function/function.php"
+]
     },
     "autoload-dev": {
         "psr-4": {
